--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 				
 
 					<div id="programBox">
-						<a href="https://forms.gle/qWkNCQezixsoEu3z5" target="_blank">	
+						<a href="https://kitabisa.com/quranmuslimdunia?utm_source=socialsharing_donor_web_null&utm_medium=share_campaign_copas&utm_campaign=share_detail_campaign" target="_blank">	
 							<div id="programBox1">
 								<div id="alphaBox">	
 									<p id="textBox">Bantu Mereka <br> Bersekolah</p>
@@ -87,7 +87,7 @@
 					</div>
 
 					<div id="programBox">
-						<a href="https://forms.gle/qWkNCQezixsoEu3z5" target="_blank">
+						<a href="https://kitabisa.com/warteggratis?utm_source=socialsharing_donor_web_null&utm_medium=share_campaign_copas&utm_campaign=share_detail_campaign" target="_blank">
 							<div id="programBox2">
 								<div  id="alphaBox">
 									<p id="textBox">Bantu Mereka <br> yang Membutuhkan</p>
@@ -98,7 +98,7 @@
 					</div>
 
 					<div id="programBox">
-						<a href="https://forms.gle/qWkNCQezixsoEu3z5" target="_blank">
+						<a href="https://kitabisa.com/bisanolongyatim?utm_source=socialsharing_donor_web_null&utm_medium=share_campaign_copas&utm_campaign=share_detail_campaign" target="_blank">
 							<div id="programBox3">
 								<div id="alphaBox">
 									<p id="textBox">Bantu Mereka	<br> Sembuh</p>
@@ -114,7 +114,7 @@
 
 	<footer>
 	
-		<p>Patabuga Foundation &#169; 2020  <br> For Dicoding SubMission 2020</p>
+		<p>Patabuga Foundation &#169; 2020  <br> For Platform 2021</p>
 	</footer>
 
 </body>
