--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 			<ul>
 				<li><a href="#tentangKami">Tentang Kami</a></li>
 				<li><a href="#program">Program</a></li>
-				<li><a href="https://forms.gle/qWkNCQezixsoEu3z5" target="_blank">Bergabung</a></li>
+				<li><a href="https://forms.gle/8PZ8NYrXFtoDyF8g8" target="_blank">Bergabung</a></li>
 			</ul>
 		</nav>
 	</header>
@@ -38,7 +38,7 @@
 				<p id="text2">Membantu dan memberikan harapan <br>	kepada mereka yang membutuhkan </p>
 
 				<div id="donasi">	
-				 <a href="https://forms.gle/qWkNCQezixsoEu3z5" target="_blank">Donasi</a>
+				 <a href="https://forms.gle/8PZ8NYrXFtoDyF8g8" target="_blank">Donasi</a>
 				</div>
 			</div>
 		</div>
